Bug 1199224 - nsTextStore should clear mLockedContent at unlocking read-only lock. r=emk, a=ritu